--- a/src/components/challenge/styles.modules.css
+++ b/src/components/challenge/styles.modules.css
@@ -9,6 +9,7 @@
     padding-bottom: 27px;
     padding-top:12px;
     transition: all .25s ease-in-out;
+  white-space: nowrap;
 }
 
 .challenge:hover{
